Add images to Categories
